...

  @override
  Widget build(BuildContext context) {
    final colors = context.colors;

    return Container(
      key: const Key('chat_message_input'),
      decoration: BoxDecoration(
        color: actionsEnabled ? colors.backgroundPrimary : colors.backgroundSecondary,
        borderRadius: BorderRadius.circular(8.r),
        border: Border.all(
          color: isFocused
              ? colors.borderPrimary
...
          ? colors.backgroundContentTertiary
          : colors.backgroundContentPrimary,
    );

    final sendButton = onSend != null
        ? WnIconButton(
            key: const Key('send_button'),
            icon: WnIcons.arrowUp,
            onPressed: actionsEnabled ? onSend : null,
            type: WnIconButtonType.primary,
            disabled: !actionsEnabled,
          )
        : null;
...
