...
                            ],
                          ),
                        ],
                        SizedBox(height: _modalSectionSpacing.h),
                        if (onReply != null) ...[
                          WnButton(
                            key: const Key('reply_button'),
                            text: context.l10n.reply,
                            type: WnButtonType.outline,
                            size: WnButtonSize.medium,
                            trailingIcon: WnIcons.reply,
                            onPressed: onReply,
                          ),
...
                            onPressed: onShare,
                          ),
                        ],
                        if (onDelete != null) ...[
                          Gap(_modalButtonSpacing.h),
                          WnButton(
                            key: const Key('delete_button'),
                            text: context.l10n.delete,
                            type: WnButtonType.destructive,
                            size: WnButtonSize.medium,
                            trailingIcon: WnIcons.trashCan,
                            onPressed: onDelete,
                          ),
...
