...
                  ),
                ),
              ],
              if (onCancel != null) ...[
                Gap(4.w),
                IconButton(
                  key: const Key('cancel_quote_button'),
                  onPressed: onCancel,
                  icon: WnIcon(
                    WnIcons.closeSmall,
                    color: colors.backgroundContentTertiary,
                    size: 18.w,
                  ),
...
