...
                      type: WnButtonType.outline,
                      loading: isDeclining.value,
                      disabled: isOffline || isProcessing,
                      onPressed: handleDecline,
                    ),
                    WnButton(
                      key: const Key('chat_invite_accept_button'),
                      text: context.l10n.accept,
                      loading: isAccepting.value,
                      disabled: isOffline || isProcessing,
                      onPressed: handleAccept,
                    ),
                  ],
...
